<resources>
    <string name="app_name">Shared Clipboard</string>
    <string name="choose_name_sandbox">Choose a name for your sandbox</string>
    <string name="create_your_sandbox">Create your sandbox!</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_choose_what_to_do">ChooseWhatToDoActivity</string>
    <string name="copy_and_paste">Copy and paste!</string>
    <string name="reopen_copy_and_paste">Open my last sandbox!</string>
    <string name="rate">Rate the app</string>
    <string name="credits">Credits</string>
    <string name="credits_content">Lorem ipsum dolet\nBla bla bla\nCredit contents</string>

    <string name="OK">OK</string>
    <string name="splash_title">PASTE&lt;BR/&gt;ANYWHERE</string>
</resources>
