<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mirko.tutorial1.ChooseWhatToDoActivity"
    style="@style/chooseScreen">

    <TextView
        android:id="@+id/splashTextViewOnChooseWhatToDo"
        style="@style/splashStringText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"/>

    <Button android:id="@+id/open_my_sandbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickOpenSandbox"
        android:text="@string/copy_and_paste"
        style="@style/chooseButton"/>

    <Button android:id="@+id/reopen_my_sandbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickReopenSandbox"
        android:text="@string/reopen_copy_and_paste"
        style="@style/chooseButton"/>

    <Button android:id="@+id/rate_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickRate"
        android:text="@string/rate"
        style="@style/chooseButton"/>

    <Button android:id="@+id/credits_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickCredits"
        android:text="@string/credits"
        style="@style/chooseButton"/>
</LinearLayout>
