<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mirko.tutorial1.SharedClipboardFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/layout_sandbox_name">
        <EditText
            android:id="@+id/edit_text_sandbox_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/choose_name_sandbox"
            style="@style/inputField"
            android:layout_alignParentTop="true"/>

        <ProgressBar
            android:id="@+id/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="100"
            android:indeterminate="false"
            android:layout_toRightOf="@id/edit_text_sandbox_name"
            android:layout_toEndOf="@id/edit_text_sandbox_name"/>
    </RelativeLayout>

    <Button
        android:id="@+id/button_attach_sandbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_sandbox_name"
        android:text="@string/create_your_sandbox"
        android:enabled="false"
        android:layout_centerHorizontal="true"
        style="@style/createSandboxButton"/>

    <TextView android:id="@+id/text_view_hyperlink"
        android:linksClickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        android:freezesText="true"
        android:layout_below="@id/layout_sandbox_name"
        style="@style/sandboxHyperlink"/>
    <EditText
        android:id="@+id/edit_text_sandbox"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:singleLine="false"
        android:layout_below="@id/text_view_hyperlink"
        android:enabled="false"
        android:background="@drawable/sandbox_shape"
        android:gravity="top"
        android:visibility="gone"
        style="@style/sandbox"/>

</RelativeLayout>
